--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <button id="show-survey" onclick="showSurvey()">Mostrar encuesta</button>
         <button id="next" style="display: none;">Siguiente</button>
     </div>
-    <img id="video" width="560" height="315" src="dancing-cat-33-title.gif" alt="videito">
+    <img id="video" width="560" height="315" src="IdleSentado.avi" alt="videito">
     <div class="text-box">
         <p>Bienvenido a la encuesta del patrón.
         </p>
