--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
         <button id="show-survey" onclick="showSurvey()">Mostrar encuesta</button>
         <button id="next" style="display: none;">Siguiente</button>
     </div>
-    <img id="video" width="560" height="315" src="IdleSentado.avi" alt="videito">
+    <video id="video" width="560" height="315" controls autoplay loop style="display: none;">
+        <source src="IdleSentado.avi" type="video/avi">
+        Tu navegador no soporta la etiqueta de video.
+    </video>
+
     <div class="text-box">
         <p>Bienvenido a la encuesta del patrón.
         </p>
