--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <button id="show-survey" onclick="showSurvey()">Mostrar encuesta</button>
         <button id="next" style="display: none;">Siguiente</button>
     </div>
-    <video id="video" width="560" height="315" controls autoplay loop style="display: none;">
+    <video id="video" width="560" height="315" autoplay loop muted style="pointer-events: none;">
         <source src="IdleSentado.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
