--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Inicio</title>
     <style>
         body {
-            background-color: #FFEDD9;
+            background-color: #00e150;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -15,7 +15,7 @@
             text-align: center;
             padding: 5px;
             margin-top: 10px;
-            background-color: #FFDAB9;
+            background-color: #00e150;
             width: 70%;
             border-radius: 30px;
             font-family: 'Helvetica';
@@ -25,7 +25,7 @@
         h1 {
             font-weight: 1000;
             font-size: 3em;
-            color: #FFA07A;
+            color: #00e150;
         }
         .survey {
             display: none;
@@ -45,7 +45,7 @@
             cursor: pointer;
             outline: none;
             color: #fff;
-            background-color: #FFA07A;
+            background-color: #00e150;
             border: none;
             border-radius: 15px;
             box-shadow: 0 9px #999;
