--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Inicio</title>
     <style>
         body {
-            background-color: #00e150;
+            background-color: #06733b;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -15,7 +15,7 @@
             text-align: center;
             padding: 5px;
             margin-top: 10px;
-            background-color: #089e00;
+            background-color: #002d16;
             width: 70%;
             border-radius: 30px;
             font-family: 'Helvetica';
@@ -44,21 +44,19 @@
             text-align: center;
             cursor: pointer;
             outline: none;
-            color: #fff;
-            background-color: #089e00;
+            color: #00e150;
+            background-color: #002d16;
             border: none;
             border-radius: 15px;
-            box-shadow: 0 9px #999;
         }
-        button:hover {background-color: #ec8c69}
+        button:hover {background-color: #002d16}
         button:active {
-            background-color: #088e00;
-            box-shadow: 0 5px #666;
+            background-color: #002d16;
             transform: translateY(4px);
         }
         .text-box {
-            background-color: #FFFAF0;
-            color: #FFA07A;
+            background-color: #002d16;
+            color: #00e150;
             width: 70%;
             padding: 10px;
             margin-top: 20px;
@@ -66,7 +64,7 @@
             border-radius: 15px;
             overflow: hidden;
             white-space: normal;
-            border-right: .15em solid orange;
+            border-right: .15em solid rgb(0, 184, 55);
         }
         #video {
             margin-top: 20px;
