--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             border: none;
             border-radius: 15px;
         }
-        button:hover {background-color: #4aa369}
+        button:hover {background-color: #397e51}
         button:active {
-            background-color: #4aa369;
+            background-color: #397e51;
             transform: translateY(4px);
         }
         .text-box {
@@ -150,7 +150,7 @@
         Tu navegador no soporta la etiqueta de video.
     </video>
     <div class="text-box">
-        <p>Bienvenido a la encuesta del patrón.</p>
+        <p>¡Hola! Me presento, soy Juacintosh, el capibara loco, contesta la siguiente encuesta y bailaré para ti.</p>
     </div>
     <div class="survey">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7xOutx2jk2BC19zNJWG9vCTmNxkqO9tjVI0_CPQDzPsHteQ/viewform?usp=sf_link" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
