--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             text-align: center;
             padding: 5px;
             margin-top: 10px;
-            background-color: #4aa369;
+            background-color: #d8ffd9;
             width: 70%;
             border-radius: 30px;
             font-family: 'Helvetica';
-            box-shadow: 0 4px 8px 0 #136147;
+            box-shadow: 0 4px 8px 0 #003b27;
             transition: 0.3s;
         }
         h1 {
             font-weight: 1000;
             font-size: 3em;
-            color: #d5fff1;
+            color: #003b27;
         }
         .survey {
             display: none;
@@ -44,19 +44,19 @@
             text-align: center;
             cursor: pointer;
             outline: none;
-            color: #d5fff1;
-            background-color: #4aa369;
+            color: #003b27;
+            background-color: #d8ffd9;
             border: none;
             border-radius: 15px;
         }
-        button:hover {background-color: #397e51}
+        button:hover {background-color: #d8ffd9}
         button:active {
-            background-color: #397e51;
+            background-color: #d8ffd9;
             transform: translateY(4px);
         }
         .text-box {
-            background-color: #4aa369;
-            color: #d5fff1;
+            background-color: #d8ffd9;
+            color: #003b27;
             width: 70%;
             padding: 10px;
             margin-top: 20px;
@@ -64,7 +64,7 @@
             border-radius: 15px;
             overflow: hidden;
             white-space: normal;
-            border-right: .15em solid #136147;
+            border-right: .15em solid #d8ffd9;
         }
         #video {
             margin-top: 20px;
