--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Inicio</title>
     <style>
         body {
-            background-color: #12933d;
+            background-color: #129352;
             display: flex;
             flex-direction: column;
             align-items: center;
