--- a/index.html
+++ b/index.html
@@ -27,19 +27,12 @@
             font-size: 3em;
             color: #003b27;
         }
-        .survey-container {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
         .survey {
+            display: none;
+            margin: auto;
             width: 70%;
             padding: 10px;
             text-align: center;
-            background-color: #d8ffd9;
-            border-radius: 15px;
         }
         .button-container {
             text-align: center;
@@ -56,11 +49,9 @@
             border: none;
             border-radius: 15px;
         }
-        button:hover {
-            background-color: #a5d6a7; /* Verde pastel */
-        }
+        button:hover {background-color: #d8ffd9}
         button:active {
-            background-color: #a5d6a7; /* Verde pastel */
+            background-color: #d8ffd9;
             transform: translateY(4px);
         }
         .text-box {
@@ -81,7 +72,7 @@
     </style>
     <script>
         function showSurvey() {
-            document.querySelector('.survey-container').style.display = 'block';
+            document.querySelector('.survey').style.display = 'block';
             document.querySelector('#show-survey').style.display = 'none';
             document.querySelector('#next').style.display = 'inline-block';
             document.querySelector('#video').style.display = 'none';
@@ -115,7 +106,7 @@
         }
 
         function showNextScreen() {
-            document.querySelector('.survey-container').style.display = 'none';
+            document.querySelector('.survey').style.display = 'none';
             document.querySelector('#next').style.display = 'none';
             document.querySelector('#video').src = 'IdleSentado.mp4'; // Cambia 'IdleSentado.mp4' por la URL correcta de tu video
             document.querySelector('.text-box').innerText = ''; 
@@ -161,10 +152,8 @@
     <div class="text-box">
         <p>¡Hola! Me presento, soy Juacintosh, el capibara loco, contesta la siguiente encuesta y bailaré para ti.</p>
     </div>
-    <div class="survey-container">
-        <div class="survey">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7xOutx2jk2BC19zNJWG9vCTmNxkqO9tjVI0_CPQDzPsHteQ/viewform?usp=sf_link" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-        </div>
+    <div class="survey">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7xOutx2jk2BC19zNJWG9vCTmNxkqO9tjVI0_CPQDzPsHteQ/viewform?usp=sf_link" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
 </body>
 </html>
