--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             color: #003b27;
         }
         .survey {
-            display: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin: auto;
             width: 70%;
             padding: 10px;
