--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             color: #003b27;
         }
         .survey {
-            display: flex;
+            display: none; /* Ocultar encuesta inicialmente */
             justify-content: center;
             align-items: center;
             margin: auto;
@@ -77,7 +77,7 @@
     <script>
         // Función para mostrar la encuesta
         function showSurvey() {
-            document.querySelector('.survey').style.display = 'block';
+            document.querySelector('.survey').style.display = 'flex'; // Mostrar encuesta
             document.querySelector('#show-survey').style.display = 'none';
             document.querySelector('#next').style.display = 'inline-block';
             document.querySelector('#video').style.display = 'none';
@@ -145,7 +145,7 @@
             video.play();
             video.loop = true;
 
-            // Detecta si el dispositivo es móvil y adapta el video
+            // Detecta si el dispositivo es móvil y, en ese caso, ajusta el video
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
                 // Es un dispositivo móvil
                 video.style.maxWidth = '100%';
