--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                 video.src = 'IdleSentado.mp4'; // Reemplaza 'IdleSentado.mp4' con la URL de tu segundo video
                 video.play(); // Reproduce el segundo video
             });
+
+            video.addEventListener('ended', function() {
+                // Cambiar la fuente del video por el tercer video cuando el segundo video termine
+                video.src = 'TercerVideo.mp4'; // Reemplaza 'TercerVideo.mp4' con la URL del tercer video
+                video.play(); // Reproducir el tercer video
+            })
             
             // Reproduce el video en bucle
             video.play();
