--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
             // Agrega un evento para detectar cuando termina el video
             video.addEventListener('ended', function() {
                 // Cambia la fuente del video por la segunda fuente
-                video.src = 'IdleSentado.mp4'; // Reemplaza 'IdleSentado.mp4' con la URL de tu segundo video
+                video.src = 'InicioDancingCapi.mp4'; // Reemplaza 'IdleSentado.mp4' con la URL de tu segundo video
                 video.play(); // Reproduce el segundo video
             });
 
             video.addEventListener('ended', function() {
                 // Cambiar la fuente del video por el tercer video cuando el segundo video termine
-                video.src = 'TercerVideo.mp4'; // Reemplaza 'TercerVideo.mp4' con la URL del tercer video
+                video.src = 'DancingCapi.mp4'; // Reemplaza 'TercerVideo.mp4' con la URL del tercer video
                 video.play(); // Reproducir el tercer video
             })
             
