--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             document.querySelector('.text-box').innerText = ''; 
             document.querySelector('#video').style.display = 'block';
             document.querySelector('.text-box').style.display = 'none';
-
+            document.getElementById('audio').play(); // Reproduce la canción
             // Muestra el contenedor del GIF después de 3 segundos
             setTimeout(function() {
                 document.getElementById('gif-container').style.display = 'block';
@@ -195,11 +195,13 @@
     <div class="survey">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7xOutx2jk2BC19zNJWG9vCTmNxkqO9tjVI0_CPQDzPsHteQ/viewform?usp=sf_link" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
-
+    <!-- Elemento de audio para reproducir el archivo MP3 -->
+    <audio id="audio" src="ChipiChapaDUbi.mp3"></audio>
     <!-- Contenedor para el GIF -->
     <div id="gif-container">
         <!-- Inserta aquí tu GIF -->
         <img src="confetti.gif" alt="GIF" style="width: 100%; height: 100%;">
     </div>
+
 </body>
 </html>
