--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
     <!-- Elemento de audio para reproducir el archivo MP3 -->
     <audio id="audio1" src="opmusic.mp3" autoplay></audio>
-    <audio id="audio" src="ChipiChapaDUbi.mp3"></audio>
+    <audio id="audio2" src="ChipiChapaDUbi.mp3"></audio>
     <!-- Contenedor para el GIF -->
     <div id="gif-container">
         <!-- Inserta aquí tu GIF -->
