--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
             document.querySelector('.text-box').innerText = ''; 
             document.querySelector('#video').style.display = 'block';
             document.querySelector('.text-box').style.display = 'none';
-
             setTimeout(function() {
                 document.getElementById('audio').play(); // Reproduce la canción
             }, 4000);
@@ -155,14 +154,6 @@
 
         // Código que se ejecuta cuando el DOM ha sido completamente cargado
         document.addEventListener('DOMContentLoaded', function(event) {
-            // Obtén el elemento del primer audio
-            var audio1 = document.getElementById('audio1');
-            // Obtén el elemento del segundo audio
-            var audio2 = document.getElementById('audio2');
-
-            // Reproduce el primer audio al cargar la página
-            audio1.play();
-
             // Agrega un evento para mostrar la encuesta
             document.querySelector('#next').addEventListener('click', showNextScreen);
 
@@ -176,11 +167,6 @@
             // Reproduce el video en bucle
             video.play();
             video.loop = true;
-            
-            // Agrega un evento para detener el primer audio y reproducir el segundo audio
-            audio1.addEventListener('play', function() {
-                audio2.pause(); // Pausa el segundo audio si se está reproduciendo
-            })
 
             // Detecta si el dispositivo es móvil y, en ese caso, ajusta el video
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
@@ -212,8 +198,7 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7xOutx2jk2BC19zNJWG9vCTmNxkqO9tjVI0_CPQDzPsHteQ/viewform?usp=sf_link" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
     <!-- Elemento de audio para reproducir el archivo MP3 -->
-    <audio id="audio1" src="opmusic.mp3" autoplay></audio>
-    <audio id="audio2" src="ChipiChapaDUbi.mp3"></audio>
+    <audio id="audio" src="ChipiChapaDUbi.mp3"></audio>
     <!-- Contenedor para el GIF -->
     <div id="gif-container">
         <!-- Inserta aquí tu GIF -->
